<resources>
    <string name="app_name">Agenda Escolar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_principal">Tela Inicial</string>
    <string name="menu_cadastro">Dados Pessoais</string>
    <string name="menu_avisos">Avisos</string>
    <string name="menu_calendario">Calendário</string>
    <string name="menu_boletim">Boletim</string>
    <string name="menu_documentos">Documentos</string>
    <string name="menu_financeiro">Financeiro</string>
    <string name="menu_sobre">Sobre Nós</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>